@@ -1,3 +1,6 @@
+2006-01-08 Benoit Grégoire  <bock@step.polymtl.ca>
+	* common.php:  Untested fix for Ticket #59
+	
 2006-01-18 François Proulx <francois.proulx@gmail.com>
 	* Remove unneeded .cvsignore files since ths svn:ignore property is set to the same list 
 	
